--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,7 +46,9 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "queue": "cpp",
+        "functional": "cpp"
     },
     "C_Cpp.default.compilerPath": "C:\\Program Files\\LLVM\\bin\\clang++.exe"
 }
